--- a/style.css
+++ b/style.css
@@ -1,53 +1,59 @@
 *{
     box-sizing: border-box;
-    margin: 0;
-}
-
-body{
-    background: aqua;
-    height: 100vh;
+  }
+  body{
+    background-color: #f1f1f1;
+opacity: 0.8;
+background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #f1f1f1 11px ), repeating-linear-gradient( #23a69d55, #23a69d );
+    font-family: 'Poppins', sans-serif;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    height: 100vh;
     overflow: hidden;
-    font-family:  'Roboto', sans-serif;
-}
-
-.container{
-    background: rgba(255, 255, 255, 0.575);
-    width: 50rem;
+    margin: 0;
+  }
+  .quiz-container{
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 2px rgba(100, 100, 100, 0.1);
+    width: 600px;
     overflow: hidden;
-    border-radius: 15px;
-    
-}
-
-.quiz-header{
+  }
+  .quiz-header{
     padding: 4rem;
-}
-
-h2{
+  }
+  h2{
     padding: 1rem;
     text-align: center;
     margin: 0;
-}
-
-
-ul{
-    list-style: none;
-}
-
-li{
-    padding: 2px;
-    margin: 1rem;
-}
-button{
-
-    background-color: antiquewhite;
-    color: black;
+  }
+  ul{
+    list-style-type: none;
+    padding: 0;
+  }
+  ul li{
+    font-size: 1.2rem;
+    margin: 1rem 0;
+  }
+  ul li label{
+    cursor: pointer;
+  }
+  button{
+    background-color: #03cae4;
+    color: #fff;
     border: none;
-    display:block;
+    display: block;
     width: 100%;
     cursor: pointer;
     font-size: 1.1rem;
+    font-family: inherit;
     padding: 1.3rem;
-}
+  }
+  button:hover{
+    background-color: #04adc4;
+  }
+  button:focus{
+    outline: none;
+    background-color: #44b927;
+  }
